# zephyr_applications

./: Kconfig  README.md  west.yml
applications/zephyr_bthome_v2/: README.md
applications/zephyr_bthome_v2/xg24_lvgl/: CMakeLists.txt  prj.conf
applications/zephyr_bthome_v2/xg24_lvgl/boards/: efr32xg24_dk2601b.overlay  xg24_dk2601b.overlay
applications/zephyr_bthome_v2/xg24_lvgl/patch/: Kconfig.gecko_usart.patch  spi_gecko.patch
applications/zephyr_bthome_v2/xg24_lvgl/src/: bthome_v2.h  main.c
applications/zephyr_bthome_v2/xg24_lvgl/src/application_ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h
applications/zephyr_bthome_v2/xg24_lvgl/src/application_ui/components/: ui_comp_hook.c
applications/zephyr_bthome_v2/xg24_lvgl/src/application_ui/images/: ui_img_1597985048.c  ui_img_25_78_png.c  ui_img_25_png.c  ui_img_30_60_png.c  ui_img_35_67_png.c  ui_img_lvgl_logo_78_24_png.c
applications/zephyr_bthome_v2/xg24_lvgl/src/application_ui/screens/: ui_ApplicationScreen.c  ui_BootScreen.c  ui_SettingScreen.c  ui_TSCalibrationScreen.c
applications/zephyr_bthome_v2/xg24_lvgl/src/squareline_prj/: BTHome v2_xG24_xG27_sensors_with_LVGL.sll  BTHome v2_xG24_xG27_sensors_with_LVGL.spj  BTHome v2_xG24_xG27_sensors_with_LVGL_events.py
applications/zephyr_bthome_v2/xg27_cli/: CMakeLists.txt  prj.conf
applications/zephyr_bthome_v2/xg27_cli/boards/: efr32bg27_brd2602a.overlay  xg27_dk2602a.overlay
applications/zephyr_bthome_v2/xg27_cli/src/: bthome_v2.c  bthome_v2.h  cli_command_table.c  main.c
applications/zephyr_efr_connect_demo_blinky/: CMakeLists.txt  README.md  prj.conf
applications/zephyr_mikrobus_demo/: CMakeLists.txt  Kconfig  README.md  prj.conf
applications/zephyr_mikrobus_demo/boards/: efr32bg22_brd4184a.overlay  sltb010a.overlay  xg27_dk2602a.overlay
applications/zephyr_mikrobus_demo/drivers/display/: ssd1306.c
applications/zephyr_mikrobus_demo/fonts/: font10x16.c  font15x24.c  font20x32.c  font5x7.c  font8x8.c
applications/zephyr_mikrobus_demo/src/: app.c  app.h  main.c
applications/zephyr_soc_throughput/: CMakeLists.txt  Kconfig  README.md  prj.conf
applications/zephyr_soc_throughput/src/: app.c  app.h  bt_event.c  bt_event.h  cli_command_table.c  main.c  throughput_common.h  throughput_gattdb.c  throughput_gattdb.h  throughput_types.h  throughput_ui.h  throughput_ui_common.c  throughput_ui_log.c  throughput_ui_log_config.h  throughput_ui_types.h
applications/zephyr_soc_throughput/src/central/: throughput_central.c  throughput_central.h  throughput_central_config.h  throughput_central_interface.c  throughput_central_interface.h
applications/zephyr_soc_throughput/src/peripheral/: throughput_peripheral.c  throughput_peripheral.h  throughput_peripheral_config.h
drivers/: CMakeLists.txt  Kconfig
zephyr/: module.yml
zephyr_efr_connect_demo_blinky/: README.md
zephyr_mikrobus_demo/: README.md  prj.conf  sample.yaml
zephyr_modified_soc_thermometer/: CMakeLists.txt  Kconfig  README.md  prj.conf
zephyr_ota_firmware_update/: prj.conf
zephyr_qwiic_connector/: CMakeLists.txt  README.md  prj.conf
zephyr_si7210_onboard_led/: CMakeLists.txt  Kconfig  README.md  prj.conf
zephyr_soc_throughput/: README.md
(+96 files in other folders)
